[package]
name = "axum-html-forms"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "forms"
path = "main.rs"

[dependencies]
axum_html_forms = { path = "axum_html_forms"}
axum_html_forms_derive = { path = "axum_html_forms_derive"}
html-node = { version = "0.2.1", features = ["typed"] }
