[package]
name = "axum_html_forms_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/tests.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
quote = "1.0.33"
syn = { version = "2.0.37", features = ["derive", "extra-traits"] }
axum_html_forms = { path = "../axum_html_forms"}
html-node = { version = "0.2.1", features = ["typed"] }

